tests/neg/i7359-g.check
-- [E007] Type Mismatch Error: tests/neg/i7359-g.scala:5:25 ------------------------------------------------------------
5 |val m : SAMTrait = () => "Hello" // error
  |                         ^^^^^^^
  |                         Found:    () => String
  |                         Required: SAMTrait
